[gd_scene load_steps=12 format=3 uid="uid://c8l4i0pf65qbq"]

[ext_resource type="Script" path="res://Game/Interface/learning.gd" id="1_vnwnq"]
[ext_resource type="Texture2D" uid="uid://c8i1u7d8k4ann" path="res://Game/Graphics/Brains/brain_1.png" id="2_b7jv8"]
[ext_resource type="PackedScene" uid="uid://bfre1ywod8qf8" path="res://Game/Interface/brain_icon.tscn" id="2_fecvy"]
[ext_resource type="BitMap" uid="uid://ud40kw60g3ab" path="res://Game/Graphics/Brains/brain_1_mono.bmp" id="3_b22bg"]
[ext_resource type="PackedScene" uid="uid://bglg83v6yd7uf" path="res://Game/Clickers/passif_learning_item.tscn" id="4_6oyge"]
[ext_resource type="PackedScene" uid="uid://bx7rbqsxy7oii" path="res://Game/Interface/Skills/skill_activation.tscn" id="5_gg0yo"]
[ext_resource type="Script" path="res://Game/Interface/passive_items_textures.gd" id="7_nxp20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ir0dp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_enkis"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rul6f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e22jq"]

[node name="Learning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vnwnq")
metadata/_tab_index = 0
metadata/_edit_use_anchors_ = true

[node name="AllContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="AllContainer"]
z_index = 80
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="LevelContainer" type="VBoxContainer" parent="AllContainer/Control"]
z_index = 90
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="CurrentBrainLevel" type="Label" parent="AllContainer/Control/LevelContainer"]
unique_name_in_owner = true
z_index = 50
layout_mode = 2
size_flags_horizontal = 4
text = "Level 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AllContainer/Control/LevelContainer"]
z_index = 50
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="AllContainer/Control/LevelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_ir0dp")

[node name="BrainXpBar" type="ProgressBar" parent="AllContainer/Control/LevelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 3
step = 1.0
show_percentage = false

[node name="VSeparator2" type="VSeparator" parent="AllContainer/Control/LevelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_ir0dp")

[node name="HSeparator" type="HSeparator" parent="AllContainer/Control/LevelContainer"]
z_index = 50
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_enkis")

[node name="HBoxContainer2" type="HBoxContainer" parent="AllContainer/Control/LevelContainer"]
z_index = 50
layout_mode = 2
size_flags_horizontal = 4

[node name="KnowledgePerSecond" type="Label" parent="AllContainer/Control/LevelContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "10000 /s"

[node name="BrainIcon" parent="AllContainer/Control/LevelContainer/HBoxContainer2" instance=ExtResource("2_fecvy")]
layout_mode = 2
size_flags_horizontal = 4

[node name="BrainAndCoContainer" type="VBoxContainer" parent="AllContainer"]
z_index = 90
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="AllContainer/BrainAndCoContainer"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="ClickerARC" type="AspectRatioContainer" parent="AllContainer/BrainAndCoContainer/CenterContainer"]
unique_name_in_owner = true
z_index = 90
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ClickerButton" type="TextureButton" parent="AllContainer/BrainAndCoContainer/CenterContainer/ClickerARC"]
layout_mode = 2
texture_normal = ExtResource("2_b7jv8")
texture_click_mask = ExtResource("3_b22bg")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="AllContainer/BrainAndCoContainer"]
layout_mode = 2

[node name="PassifClickers" type="HFlowContainer" parent="AllContainer/BrainAndCoContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
alignment = 1

[node name="PassifLearningItem" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem2" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem3" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem4" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem5" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem6" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem7" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem9" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="PassifLearningItem8" parent="AllContainer/BrainAndCoContainer/HBoxContainer/PassifClickers" instance=ExtResource("4_6oyge")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="AllContainer/BrainAndCoContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_rul6f")

[node name="ActiveSkills" type="FlowContainer" parent="AllContainer/BrainAndCoContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 6
vertical = true

[node name="SkillActivation" parent="AllContainer/BrainAndCoContainer/HBoxContainer/ActiveSkills" instance=ExtResource("5_gg0yo")]
layout_mode = 2

[node name="SkillActivation2" parent="AllContainer/BrainAndCoContainer/HBoxContainer/ActiveSkills" instance=ExtResource("5_gg0yo")]
layout_mode = 2

[node name="SkillActivation3" parent="AllContainer/BrainAndCoContainer/HBoxContainer/ActiveSkills" instance=ExtResource("5_gg0yo")]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="AllContainer/BrainAndCoContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_rul6f")

[node name="HSeparator" type="HSeparator" parent="AllContainer/BrainAndCoContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_e22jq")

[node name="PassiveItemsTextures" type="Control" parent="."]
unique_name_in_owner = true
z_index = 50
layout_mode = 1
anchor_top = 0.00833333
anchor_right = 1.0
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_nxp20")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="AllContainer/BrainAndCoContainer/CenterContainer/ClickerARC/ClickerButton" to="." method="_on_clicker_button_pressed"]
